--- a/intro.html
+++ b/intro.html
@@ -408,7 +408,7 @@ document.write(`
 <ul class="simple">
 <li><p>MAS31003 (Topics in Mathematical Biology) is the version of the course for 3rd year students.</p></li>
 <li><p>MAS61024 (Further Topics in Mathematical Biology) is the version of the course for 4th year students.
-The main lecture material is the same for all students, but 4th years have to complete some additional work. Please <a class="reference download internal" download="" href="_downloads/7dab29b4b42490f23fe20ecb9d6ce07a/level4.html"><span class="xref download myst">click here</span></a> for more details.</p></li>
+The main lecture material is the same for all students, but 4th years have to complete some additional work. Please <a href="level4.html"><span class="xref download myst">click here</span></a> for more details.</p></li>
 </ul>
 </div>
 <p>Below are some key details about the module:</p>
