--- a/intro.html
+++ b/intro.html
@@ -451,7 +451,7 @@ document.write(`
 <li><p>MAS31003 (Topics in Mathematical Biology) is the version of the course for 3rd year students.</p></li>
 <li><p>MAS61024 (Further Topics in Mathematical Biology) is the version of the course for 4th year students.</p></li>
 </ul>
-<p>The main lecture material is the same for all students, but 4th years have to complete some additional work. Please <span class="xref myst">click here</span> for more details.</p>
+<p>The main lecture material is the same for all students, but 4th years have to complete some additional work. Please <a href="level4.html">click here</a> for more details.</p>
 </div>
 <p>Below are some key details about the module:</p>
 <ul class="simple">
@@ -464,7 +464,7 @@ document.write(`
 <li><p>For two of the lectures we will instead have a computer lab - Mondays of week 5 and week 10 in Alfred Denny Building A04.</p></li>
 <li><p>Pre-recorded videos will also be made available should you not be able to attend a lecture, and/or for revision.</p></li>
 <li><p>Assessment for 3rd year students is 80% exam and 20% project.</p></li>
-<li><p>Assessment for 4th year students is 50% exam, 10% project, and 40% independent study report. Please <span class="xref myst">click here</span> for more details.</p></li>
+<li><p>Assessment for 4th year students is 50% exam, 10% project, and 40% independent study report. Please <a href="level4.html">click here</a> for more details.</p></li>
 <li><p>The project component takes place in week 6, with a due date of Monday week 8.</p></li>
 <li><p>I will run two student drop-in hours each week:</p>
 <ul>
