--- a/ch3.html
+++ b/ch3.html
@@ -627,7 +627,7 @@ J=&amp;\left(
 </div>
 <p>We can also plot a bifurcation diagram of the system. This is slightly complicated since we now have two variables and multiple parameters, but we can just focus on how one parameter impacts one variable. Here we see three different transcritical bifurcations at different points as we vary the red squirrel carrying capacity, <span class="math notranslate nohighlight">\(a\)</span>.</p>
 <ul class="simple">
-<li><p>When <span class="math notranslate nohighlight">\(a\)</span> is low, the Grey-only equilibrium (grey line with <span class="math notranslate nohighlight">\(R=0\)</span>) is stable, the Red-only equilibrium (red line) is unstable and the coexistence equilibrium (blue) is negative (and unstable).</p></li>
+<li><p>When <span class="math notranslate nohighlight">\(a\)</span> is low, the Grey-only equilibrium (grey line with <span class="math notranslate nohighlight">\(R=0\)</span>) is stable, the Red-only equilibrium (blue line) is unstable and the coexistence equilibrium (red) is negative (and unstable).</p></li>
 <li><p>When <span class="math notranslate nohighlight">\(a\)</span> is intermediate, the coexistence equilibrium becomes positive and stable and the Grey-only equilibrium becomes unstable through a transcritical bifurcation. The Red-only equilibrium remains unstable.</p></li>
 <li><p>When <span class="math notranslate nohighlight">\(a\)</span> is high, the coexistence equilibrium becomes unstable (and actually negative in <span class="math notranslate nohighlight">\(G\)</span>, though this plot does not show that) and the Red-only equilibrium becomes stable through a transcritical bifurcation. The Grey-only equilibrium remains unstable.</p></li>
 </ul>
@@ -767,4 +767,5 @@ By Alex Best
   <footer class="bd-footer">
   </footer>
   </body>
+
 </html>
