--- a/ch9.html
+++ b/ch9.html
@@ -482,7 +482,7 @@ Click for solution<div class="sd-summary-down docutils">
 <p>We have a two-dimensional system and both variables must be non-negative to make biological sense. We can use the workings we used when finding the equilibria to help us find the nullclines. The nullclines from the first equation give us:</p>
 <ul class="simple">
 <li><p><span class="math notranslate nohighlight">\(V=0\)</span> - a straight vertical line.</p></li>
-<li><p><span class="math notranslate nohighlight">\(T=p(1-V/K)-\mu)/\beta\)</span> - a decreasing line strating at <span class="math notranslate nohighlight">\((p-\mu)/\beta\)</span> and crossing 0 at <span class="math notranslate nohighlight">\(V=K(1-\mu/\beta)\)</span>.</p></li>
+<li><p><span class="math notranslate nohighlight">\(T=p(1-V/K)-\mu)/\beta\)</span> - a decreasing line starting at <span class="math notranslate nohighlight">\((p-\mu)/\beta\)</span> and crossing 0 at <span class="math notranslate nohighlight">\(V=K(1-\mu/p)\)</span>.</p></li>
 </ul>
 <p>After a couple of lines of working we can find the nullcline from the second equation to be,</p>
 <ul class="simple">
@@ -687,4 +687,5 @@ By Alex Best
   <footer class="bd-footer">
   </footer>
   </body>
+
 </html>
